tdf#106796 Make CHITEST and CHISQ.TEST comply with ODFF1.2 and improve

interoperability with Excel.

Note: the functions now don't accept empty datasets, just like Excel.
This is not fully compliant with ODFF1.2. A change request to make ODFF
reflect this behaviour would be appropiate.

Change-Id: I70225a4dc8e20a035d25af4290137714cda95624
Reviewed-on: https://gerrit.libreoffice.org/35864
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>