sc/qa/unit/ucalc_formula.cxx
@@ -6718,27 +6718,27 @@ void Test::testFuncCHITEST()
     m_pDoc->SetValue(1, 0, 0, 2.0); // B1
     m_pDoc->SetValue(1, 1, 0, 1.0); // B2
     aVal = m_pDoc->GetString(aPos);
-    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return Err:502 for matrices with different size",
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return Err:502 for matrix with empty cells",
             OUString("Err:502"), aVal);
 
     m_pDoc->SetValue(3, 0, 0, 2.0); // D1
     m_pDoc->SetValue(3, 1, 0, 3.0); // D2
-    aVal = m_pDoc->GetString(aPos);
-    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return Err:502 for matrices with different size",
-            OUString("Err:502"), aVal);
-    m_pDoc->SetValue(4, 0, 0, 2.0); // E1
+    CPPUNIT_ASSERT_DOUBLES_EQUAL_MESSAGE("Calculation of CHITEST failed", 0.3613, m_pDoc->GetValue(aPos), 10e-4);
+
     m_pDoc->SetValue(4, 1, 0, 1.0); // E2
     CPPUNIT_ASSERT_DOUBLES_EQUAL_MESSAGE("Calculation of CHITEST failed", 0.3613, m_pDoc->GetValue(aPos), 10e-4);
     m_pDoc->SetValue(4, 0, 0, 3.0); // E1
     CPPUNIT_ASSERT_DOUBLES_EQUAL_MESSAGE("Calculation of CHITEST failed", 0.2801, m_pDoc->GetValue(aPos), 10e-4);
+    m_pDoc->SetValue(4, 0, 0, 0.0); // E1
+    aVal = m_pDoc->GetString(aPos);
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return #DIV/0 for expected values of 0", OUString("#DIV/0!"), aVal);
+    m_pDoc->SetValue(4, 0, 0, 3.0); // E1
     m_pDoc->SetValue(1, 1, 0, 0.0); // B2
     CPPUNIT_ASSERT_DOUBLES_EQUAL_MESSAGE("Calculation of CHITEST failed", 0.1410, m_pDoc->GetValue(aPos), 10e-4);
 
     // 3x3 matrices test
     m_pDoc->SetString(aPos, "=CHITEST(A1:C3;D1:F3)");
-    aVal = m_pDoc->GetString(aPos);
-    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return Err:502 for matrices with empty",
-            OUString("Err:502"), aVal);
+    CPPUNIT_ASSERT_DOUBLES_EQUAL_MESSAGE("Calculation of CHITEST failed", 0.7051, m_pDoc->GetValue(aPos), 10e-4);
 
     m_pDoc->SetValue(2, 0, 0, 3.0); // C1
     m_pDoc->SetValue(2, 1, 0, 2.0); // C2
@@ -6785,7 +6785,7 @@ void Test::testFuncCHITEST()
     CPPUNIT_ASSERT_DOUBLES_EQUAL_MESSAGE("Calculation of CHITEST failed", 0.0868, m_pDoc->GetValue(aPos), 10e-4);
 
     // no convergence error
-    m_pDoc->SetValue(4, 0, 0, 0.0); // E1
+    m_pDoc->SetValue(4, 0, 0, 1.0E308); // E1
     aVal = m_pDoc->GetString(aPos);
     CPPUNIT_ASSERT_EQUAL(OUString("Err:523"), aVal);
     m_pDoc->SetValue(4, 0, 0, 3.0); // E1
@@ -6805,8 +6805,8 @@ void Test::testFuncCHITEST()
     m_pDoc->SetValue(2, 2, 0, 0.0); // C3
     m_pDoc->SetValue(3, 0, 0, 0.0); // D1
     aVal = m_pDoc->GetString(aPos);
-    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return #VALUE! for matrices with empty",
-            OUString("#VALUE!"), aVal);
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return #DIV/0! for matrices with empty",
+            OUString("#DIV/0!"), aVal);
     m_pDoc->SetValue(3, 1, 0, 0.0); // D2
     m_pDoc->SetValue(3, 2, 0, 0.0); // D3
     m_pDoc->SetValue(4, 0, 0, 0.0); // E1
@@ -6816,8 +6816,8 @@ void Test::testFuncCHITEST()
     m_pDoc->SetValue(5, 1, 0, 0.0); // F2
     m_pDoc->SetValue(5, 2, 0, 0.0); // F3
     aVal = m_pDoc->GetString(aPos);
-    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return #VALUE! for matrices with empty",
-            OUString("#VALUE!"), aVal);
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("CHITEST should return #DIV/0! for matrices with empty",
+            OUString("#DIV/0!"), aVal);
 
     m_pDoc->DeleteTab(0);
 }
